@@ -21,7 +21,7 @@
 BOOL g_bOptions_EnableThumbnails          = TRUE;
 BOOL g_bOptions_EnableThumbnailAnimation  = TRUE;
 BOOL g_bOptions_EnableTrayIcon            = TRUE;
-BOOL g_bOptions_ShowWhenFocusLost         = FALSE;
+BOOL g_bOptions_ShowTaskbarWhenFullAppLostFocus         = FALSE;
 
 INT32  g_iOptions_ThumbnailSpacer          = 8;
 UINT32 g_iOptions_ThumbnailDestroyTimer    = 1000;
