@@ -23,7 +23,7 @@
 extern BOOL g_bOptions_EnableThumbnails;
 extern BOOL g_bOptions_EnableThumbnailAnimation;
 extern BOOL g_bOptions_EnableTrayIcon;
-extern BOOL g_bOptions_ShowWhenFocusLost;
+extern BOOL g_bOptions_ShowTaskbarWhenFullAppLostFocus;
 
 extern INT32  g_iOptions_ThumbnailSpacer;
 extern UINT32 g_iOptions_ThumbnailDestroyTimer;
